(fix): image tag

--- a/clusters/omv/apps/values.yaml
+++ b/clusters/omv/apps/values.yaml
@@ -196,6 +196,12 @@ applications:
       namespace: default
     source:
       path: components/default/cloudnative-cluster
+    plugin:
+      parameters:
+        - name: storageClassName
+          string: longhorn
+        - name: volumeSnapshotClassName
+          string: longhorn-snapclass
 
   # rwmarkable:
   #   annotations:
