--- a/components/volsync-system/volsync-replication/external-secret.yaml
+++ b/components/volsync-system/volsync-replication/external-secret.yaml
@@ -2,13 +2,13 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: "${APP}-volsync"
+  name: "${ARGOCD_APP_NAME}-volsync"
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword-connect
   target:
-    name: "${APP}-volsync-secret"
+    name: "${ARGOCD_APP_NAME}-volsync-secret"
     template:
       data:
         KOPIA_FS_PATH: /repository
