--- a/components/default/barman-cloud/values.yaml
+++ b/components/default/barman-cloud/values.yaml
@@ -18,7 +18,7 @@ controllers:
           - --client-cert=/client/tls.crt
           - --server-address=:9090
         env:
-          SIDECAR_IMAGE: ghcr.io/cloudnative-pg/plugin-barman-cloud-sidecar:${SIDECAR_IMAGE_VERSION}
+          SIDECAR_IMAGE: ghcr.io/cloudnative-pg/plugin-barman-cloud-sidecar:v0.6.0
         probes:
           liveness:
             enabled: true
