--- a/components/volsync-system/volsync-replication/pvc.yaml
+++ b/components/volsync-system/volsync-replication/pvc.yaml
@@ -2,14 +2,14 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: ${APP}
+  name: ${ARGOCD_APP_NAME}
 spec:
   accessModes:
     - ReadWriteOnce
   dataSourceRef:
     kind: ReplicationDestination
     apiGroup: volsync.backube
-    name: ${APP}-dst
+    name: ${ARGOCD_APP_NAME}-dst
   resources:
     requests:
       storage: 5Gi
