(fix): test without backup

--- a/components/default/cloudnative-cluster/cluster.yaml
+++ b/components/default/cloudnative-cluster/cluster.yaml
@@ -6,8 +6,8 @@ metadata:
   name: pg17-omv
   annotations:
     cnpg.io/skipEmptyWalArchiveCheck: enabled
-    app-source: ${ARGOCD_APP_STORAGE_CLASS}
-    dummy: ${ARGOCD_APP_VOLUME_SNAPSHOT_CLASS}
+    app-source: ${ARGOCD_STORAGE_CLASS}
+    dummy: ${ARGOCD_VOLUME_SNAPSHOT_CLASS}
 spec:
   instances: 1
   imageName: ghcr.io/cloudnative-pg/postgresql:17.6-minimal-trixie
@@ -29,9 +29,9 @@ spec:
       memory: 2Gi
   monitoring:
     enablePodMonitor: true
-  bootstrap:
-    recovery:
-      source: &recoveryCluster pg17-omv
+  # bootstrap:
+  #   recovery:
+  #     source: &recoveryCluster pg17-omv
   plugins:
     - name: barman-cloud.cloudnative-pg.io
       isWALArchiver: true
@@ -39,13 +39,13 @@ spec:
         barmanObjectName: pg17-omv-backup
         serverName: &currentCluster pg17-omv
   # Note: externalClusters is needed when recovering from an existing cnpg cluster
-  externalClusters:
-    - name: *recoveryCluster
-      plugin:
-        name: barman-cloud.cloudnative-pg.io
-        parameters:
-          barmanObjectName: pg17-omv-backup
-          serverName: *recoveryCluster
+  # externalClusters:
+  #   - name: *recoveryCluster
+  #     plugin:
+  #       name: barman-cloud.cloudnative-pg.io
+  #       parameters:
+  #         barmanObjectName: pg17-omv-backup
+  #         serverName: *recoveryCluster
 ---
 # yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/barmancloud.cnpg.io/objectstore_v1.json
 apiVersion: barmancloud.cnpg.io/v1
