--- a/clusters/omv/apps/values.yaml
+++ b/clusters/omv/apps/values.yaml
@@ -197,23 +197,23 @@ applications:
     source:
       path: components/default/cloudnative-cluster
 
-  # rwmarkable:
-  #   annotations:
-  #     argocd.argoproj.io/sync-wave: "35"
-  #   destination:
-  #     namespace: default
-  #   source:
-  #     path: components/default/rwmarkable
-  #     plugin:
-  #       env:
-  #         - name: STORAGE_CLASS
-  #           value: longhorn
-  #         - name: VOLUME_SNAPSHOT_CLASS
-  #           value: longhorn
-  #         - name: CACHE_SIZE
-  #           value: 4Gi
-  #         - name: PVC_SIZE
-  #           value: 2Gi
+  rwmarkable:
+    annotations:
+      argocd.argoproj.io/sync-wave: "35"
+    destination:
+      namespace: default
+    source:
+      path: components/default/rwmarkable
+      plugin:
+        env:
+          - name: STORAGE_CLASS
+            value: longhorn
+          - name: VOLUME_SNAPSHOT_CLASS
+            value: longhorn
+          - name: CACHE_SIZE
+            value: 4Gi
+          - name: PVC_SIZE
+            value: 2Gi
 
   system-upgrade-controller:
     annotations:
