--- a/components/volsync-system/volsync-replication/replicationsource.yaml
+++ b/components/volsync-system/volsync-replication/replicationsource.yaml
@@ -10,7 +10,7 @@ spec:
   kopia:
     accessModes: ["ReadWriteOnce"]
     cacheAccessModes: ["ReadWriteOnce"]
-    cacheCapacity: ${ARGOCD_ENV_CACHE_SIZE}
+    cacheCapacity: ${ARGOCD_ENV_VOLSYNC_CAPACITY}
     cacheStorageClassName: ${ARGOCD_ENV_STORAGE_CLASS}
     compression: zstd-fastest
     copyMethod: Snapshot
