(fix): add s3 backup

--- a/components/longhorn-system/longhorn/values.yaml
+++ b/components/longhorn-system/longhorn/values.yaml
@@ -54,6 +54,9 @@ longhornDriver:
     requests:
       cpu: 100m
       memory: 128Mi
+defaultBackupStore:
+  backupTarget: "s3://longhorn-backup@garage/"
+  backupTargetCredentialSecret: garage-longhorn-keys
 longhornUI:
   replicas: 1
 annotations:
