--- a/components/longhorn-system/longhorn/kustomization.yaml
+++ b/components/longhorn-system/longhorn/kustomization.yaml
@@ -5,6 +5,7 @@ namespace: longhorn-system
 resources:
   - namespace.yaml
   - https://github.com/kubernetes-csi/external-snapshotter/client/config/crd
+  - ./external-secret.yaml
   - http-route.yaml
   - ./volumesnapshotclass.yaml
 helmCharts:
