--- a/components/longhorn-system/longhorn/external-secret.yaml
+++ b/components/longhorn-system/longhorn/external-secret.yaml
@@ -15,7 +15,7 @@ spec:
       data:
         AWS_ACCESS_KEY_ID: '{{ .MAIN_ACCESS_KEY }}'
         AWS_SECRET_ACCESS_KEY: '{{ .MAIN_SECRET_KEY }}'
-        AWS_ENDPOINTS: "https://garage.default:9000"
+        AWS_ENDPOINTS: "http://garage.default:3900"
   dataFrom:
     - extract:
         key: garage
