(feat): add ememos

--- a/clusters/omv/apps/values.yaml
+++ b/clusters/omv/apps/values.yaml
@@ -197,6 +197,14 @@ applications:
     source:
       path: components/default/cloudnative-cluster
 
+  memos:
+    annotations:
+      argocd.argoproj.io/sync-wave: "35"
+    destination:
+      namespace: default
+    source:
+      path: components/default/memos
+
   rwmarkable:
     annotations:
       argocd.argoproj.io/sync-wave: "35"
