--- a/components/default/memos/externalsecret.yaml
+++ b/components/default/memos/externalsecret.yaml
@@ -13,12 +13,12 @@ spec:
     template:
       engineVersion: v2
       data:
-        MEMOS_DSN: postgresql://{{ .POSTGRES_USER }}:{{ .POSTGRES_PASSWORD }}@pg17-omv-rw.default.svc.cluster.local:5432/memos?sslmode=disable
+        MEMOS_DSN: postgresql://{{ .POSTGRES_USER }}:{{ .POSTGRES_PASS }}@pg17-omv-rw.default.svc.cluster.local:5432/memos?sslmode=disable
 
         INIT_POSTGRES_DBNAME: "memos"
         INIT_POSTGRES_HOST: "pg17-omv-rw.default.svc.cluster.local"
         INIT_POSTGRES_USER: "{{ .POSTGRES_USER }}"
-        INIT_POSTGRES_PASS: "{{ .POSTGRES_PASSWORD }}"
+        INIT_POSTGRES_PASS: "{{ .POSTGRES_PASS }}"
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
   dataFrom:
     - extract:
