--- a/components/volsync-system/volsync-replication/replicationdestination.yaml
+++ b/components/volsync-system/volsync-replication/replicationdestination.yaml
@@ -12,8 +12,8 @@ spec:
     cacheCapacity: ${ARGOCD_ENV_VOLSYNC_CAPACITY}
     cacheStorageClassName: ${ARGOCD_ENV_STORAGE_CLASS}
     capacity: ${ARGOCD_ENV_VOLSYNC_CAPACITY}
-    cleanupCachePVC: true
-    cleanupTempPVC: true
+    cleanupCachePVC: false
+    cleanupTempPVC: false
     copyMethod: Snapshot
     enableFileDeletion: true
     moverSecurityContext:
