--- a/components/observability/scrutiny-collector/kustomization.yaml
+++ b/components/observability/scrutiny-collector/kustomization.yaml
@@ -8,6 +8,6 @@ helmCharts:
   - name: app-template
     releaseName: scrutiny-collector
     namespace: observability
-    repo: oci://ghcr.io/bjw-s-labs/helm-charts
+    repo: oci://ghcr.io/bjw-s-labs/helm
     version: 4.2.0
     valuesFile: values.yaml
