--- a/components/kube-system/generic-device-plugin/kustomization.yaml
+++ b/components/kube-system/generic-device-plugin/kustomization.yaml
@@ -14,6 +14,6 @@ helmCharts:
   - name: app-template
     releaseName: generic-device-plugin
     namespace: kube-system
-    repo: oci://ghcr.io/bjw-s-labs/helm-charts
+    repo: oci://ghcr.io/bjw-s-labs/helm
     version: 4.2.0
     valuesFile: values.yaml
