--- a/components/network/cloudflare-tunnel/kustomization.yaml
+++ b/components/network/cloudflare-tunnel/kustomization.yaml
@@ -17,6 +17,6 @@ helmCharts:
   - name: app-template
     releaseName: cloudflare-tunnel
     namespace: network
-    repo: oci://ghcr.io/bjw-s-labs/helm-charts
+    repo: oci://ghcr.io/bjw-s-labs/helm
     version: 4.2.0
     valuesFile: values.yaml
