--- a/components/observability/scrutiny-app/kustomization.yaml
+++ b/components/observability/scrutiny-app/kustomization.yaml
@@ -11,6 +11,6 @@ helmCharts:
   - name: app-template
     releaseName: scrutiny
     namespace: observability
-    repo: oci://ghcr.io/bjw-s-labs/helm-charts
+    repo: oci://ghcr.io/bjw-s-labs/helm
     version: 4.2.0
     valuesFile: values.yaml
