(fix): pvc name

--- a/components/default/jellyfin/values.yaml
+++ b/components/default/jellyfin/values.yaml
@@ -47,7 +47,7 @@ service:
 persistence:
   config:
     enabled: true
-    existingClaim: jellyfin-config
+    existingClaim: jellyfin
     globalMounts:
       - path: /config
   transcode:
