--- a/components/longhorn-system/longhorn/values.yaml
+++ b/components/longhorn-system/longhorn/values.yaml
@@ -30,6 +30,10 @@ preUpgradeChecker:
 
 persistence:
   defaultClass: false
+  defaultClassReplicaCount: 2
+  defaultFsType: ext4
+  reclaimPolicy: Delete
+  defaultMkfsParams: "-F"
 
 # Resource limits for small clusters
 longhornManager:
