--- a/clusters/omv/apps/values.yaml
+++ b/clusters/omv/apps/values.yaml
@@ -205,6 +205,22 @@ applications:
     source:
       path: components/default/memos
 
+  blinko:
+    annotations:
+      argocd.argoproj.io/sync-wave: "35"
+    destination:
+      namespace: default
+    source:
+      path: components/default/blinko
+      plugin:
+        env:
+          - name: STORAGE_CLASS
+            value: longhorn-volsync
+          - name: VOLUME_SNAPSHOT_CLASS
+            value: longhorn
+          - name: VOLSYNC_CAPACITY
+            value: 1Gi
+
   jellyfin:
     annotations:
       argocd.argoproj.io/sync-wave: "35"
