--- a/components/default/blinko/kustomization.yaml
+++ b/components/default/blinko/kustomization.yaml
@@ -2,12 +2,13 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: default
 resources:
+  - ./externalsecret.yaml
   - ./http-route.yaml
 components:
   - ../../volsync-system/volsync-replication
 helmCharts:
   - name: app-template
-    releaseName: rwmarkable
+    releaseName: blinko
     namespace: default
     repo: oci://ghcr.io/bjw-s-labs/helm
     version: "4.3.0"
