--- a/clusters/omv/apps/values.yaml
+++ b/clusters/omv/apps/values.yaml
@@ -93,13 +93,13 @@ applications:
     source:
       path: clusters/omv/apps/argo-system/argo-cd
 
-  longhorn:
-    annotations:
-      argocd.argoproj.io/sync-wave: "20"
-    destination:
-      namespace: longhorn-system
-    source:
-      path: components/longhorn-system/longhorn
+  # longhorn:
+  #   annotations:
+  #     argocd.argoproj.io/sync-wave: "20"
+  #   destination:
+  #     namespace: longhorn-system
+  #   source:
+  #     path: components/longhorn-system/longhorn
 
   snapshot-controller:
     annotations:
@@ -189,53 +189,53 @@ applications:
     source:
       path: components/default/cloudnative-pg
 
-  cloudnative-cluster:
-    annotations:
-      argocd.argoproj.io/sync-wave: "30"
-    destination:
-      namespace: default
-    source:
-      path: components/default/cloudnative-cluster
+  # cloudnative-cluster:
+  #   annotations:
+  #     argocd.argoproj.io/sync-wave: "30"
+  #   destination:
+  #     namespace: default
+  #   source:
+  #     path: components/default/cloudnative-cluster
 
-  memos:
-    annotations:
-      argocd.argoproj.io/sync-wave: "35"
-    destination:
-      namespace: default
-    source:
-      path: components/default/memos
+  # memos:
+  #   annotations:
+  #     argocd.argoproj.io/sync-wave: "35"
+  #   destination:
+  #     namespace: default
+  #   source:
+  #     path: components/default/memos
 
-  blinko:
-    annotations:
-      argocd.argoproj.io/sync-wave: "35"
-    destination:
-      namespace: default
-    source:
-      path: components/default/blinko
-      plugin:
-        env:
-          - name: STORAGE_CLASS
-            value: longhorn-volsync
-          - name: VOLUME_SNAPSHOT_CLASS
-            value: longhorn
-          - name: VOLSYNC_CAPACITY
-            value: 1Gi
+  # blinko:
+  #   annotations:
+  #     argocd.argoproj.io/sync-wave: "35"
+  #   destination:
+  #     namespace: default
+  #   source:
+  #     path: components/default/blinko
+  #     plugin:
+  #       env:
+  #         - name: STORAGE_CLASS
+  #           value: longhorn-volsync
+  #         - name: VOLUME_SNAPSHOT_CLASS
+  #           value: longhorn
+  #         - name: VOLSYNC_CAPACITY
+  #           value: 1Gi
 
-  jellyfin:
-    annotations:
-      argocd.argoproj.io/sync-wave: "35"
-    destination:
-      namespace: default
-    source:
-      path: components/default/jellyfin
-      plugin:
-        env:
-          - name: STORAGE_CLASS
-            value: longhorn-volsync
-          - name: VOLUME_SNAPSHOT_CLASS
-            value: longhorn
-          - name: VOLSYNC_CAPACITY
-            value: 10Gi
+  # jellyfin:
+  #   annotations:
+  #     argocd.argoproj.io/sync-wave: "35"
+  #   destination:
+  #     namespace: default
+  #   source:
+  #     path: components/default/jellyfin
+  #     plugin:
+  #       env:
+  #         - name: STORAGE_CLASS
+  #           value: longhorn-volsync
+  #         - name: VOLUME_SNAPSHOT_CLASS
+  #           value: longhorn
+  #         - name: VOLSYNC_CAPACITY
+  #           value: 10Gi
 
   system-upgrade-controller:
     annotations:
