--- a/clusters/omv/apps/values.yaml
+++ b/clusters/omv/apps/values.yaml
@@ -221,21 +221,21 @@ applications:
   #         - name: VOLSYNC_CAPACITY
   #           value: 1Gi
 
-  # jellyfin:
-  #   annotations:
-  #     argocd.argoproj.io/sync-wave: "35"
-  #   destination:
-  #     namespace: default
-  #   source:
-  #     path: components/default/jellyfin
-  #     plugin:
-  #       env:
-  #         - name: STORAGE_CLASS
-  #           value: longhorn-volsync
-  #         - name: VOLUME_SNAPSHOT_CLASS
-  #           value: longhorn
-  #         - name: VOLSYNC_CAPACITY
-  #           value: 10Gi
+  jellyfin:
+    annotations:
+      argocd.argoproj.io/sync-wave: "35"
+    destination:
+      namespace: default
+    source:
+      path: components/default/jellyfin
+      plugin:
+        env:
+          - name: STORAGE_CLASS
+            value: longhorn-volsync
+          - name: VOLUME_SNAPSHOT_CLASS
+            value: longhorn
+          - name: VOLSYNC_CAPACITY
+            value: 10Gi
 
   system-upgrade-controller:
     annotations:
