--- a/components/argo-system/argo-cd/values.yaml
+++ b/components/argo-system/argo-cd/values.yaml
@@ -8,6 +8,9 @@ configs:
     server.insecure: true
     controller.diff.server.side: true
   cm:
+    accounts.readonly: apiKey
+    rbac:
+      policy.csv: "g, readonly, role:readonly"
     statusbadge.enabled: true
     kustomize.buildOptions: "--enable-alpha-plugins --enable-exec  --load-restrictor LoadRestrictionsNone"
     # Custom health check
