--- a/components/observability/kube-prometheus-stack/alertmanagerconfig.yaml
+++ b/components/observability/kube-prometheus-stack/alertmanagerconfig.yaml
@@ -70,7 +70,7 @@ spec:
           sendResolved: true
           sound: gamelan
           title: >-
-            [{{ .CommonLabels.cluster }}] [{{ .Status | toUpper }}{{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }}{{ end }}] {{ .CommonLabels.alertname }}
+            [${CLUSTER_DOMAIN}] [{{ .Status | toUpper }}{{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }}{{ end }}] {{ .CommonLabels.alertname }}
           ttl: 86400s
           token:
             name: &secret alertmanager-secret
