--- a/clusters/omv/apps/values.yaml
+++ b/clusters/omv/apps/values.yaml
@@ -233,9 +233,9 @@ applications:
           - name: STORAGE_CLASS
             value: longhorn-volsync
           - name: ETCD_ENABLED
-            value: false
+            value: "false"
           - name: ETCD_RULES_ENABLED
-            value: false
+            value: "false"
 
   system-upgrade-controller:
     annotations:
