--- a/clusters/omv/apps/values.yaml
+++ b/clusters/omv/apps/values.yaml
@@ -237,6 +237,14 @@ applications:
           - name: ETCD_RULES_ENABLED
             value: "false"
 
+  kubechecks:
+    annotations:
+      argocd.argoproj.io/sync-wave: "35"
+    destination:
+      namespace: argo-system
+    source:
+      path: components/argo-system/kubechecks
+
   system-upgrade-controller:
     annotations:
       argocd.argoproj.io/sync-wave: "45"
