--- a/components/argo-system/kubechecks/values.yaml
+++ b/components/argo-system/kubechecks/values.yaml
@@ -15,7 +15,7 @@ configMap:
     KUBECHECKS_FALLBACK_K8S_VERSION: "1.23.0"
     KUBECHECKS_LOG_LEVEL: debug
     KUBECHECKS_NAMESPACE: kubechecks
-    KUBECHECKS_WEBHOOK_URL_BASE: https://kubechecks.apps.${PLATFORM_BASE_DOMAIN}
+    KUBECHECKS_WEBHOOK_URL_BASE: https://kubechecks.${CLUSTER_DOMAIN}
     ARGOCD_EXEC_TIMEOUT: 600s
     KUBECHECKS_OTEL_ENABLED: "false"
     KUBECHECKS_VCS_TYPE: "github"
@@ -43,6 +43,8 @@ deployment:
   envFrom:
     - secretRef:
         name: kubechecks
+    - secretRef:
+        name: argocd-token
   startupProbe:
     failureThreshold: 30
     periodSeconds: 10
