(chore): test files on mount

--- a/components/argo-system/kubechecks/job.yaml
+++ b/components/argo-system/kubechecks/job.yaml
@@ -21,7 +21,7 @@ spec:
               PASSWORD=$(cat /creds/admin.password)
 
               echo "🔑 Logging into ArgoCD"
-              cat /creds
+              ls /creds
               argocd login --plaintext argocd-server.argo-system.svc.cluster.local \
                 --username $USERNAME \
                 --password $PASSWORD
