--- a/components/argo-system/kubechecks/values.yaml
+++ b/components/argo-system/kubechecks/values.yaml
@@ -11,7 +11,7 @@ configMap:
     KUBECHECKS_ARGOCD_API_INSECURE: "true"
     KUBECHECKS_ARGOCD_API_NAMESPACE: argo-system
     KUBECHECKS_ARGOCD_REPOSITORY_ENDPOINT: argocd-repo-server.argo-system:8081
-    KUBECHECKS_ARGOCD_API_SERVER_ADDR: argocd-server.argo-system.svc.cluster.local:80
+    KUBECHECKS_ARGOCD_API_SERVER_ADDR: argo.${CLUSTER_DOMAIN}:443
     KUBECHECKS_ARGOCD_REPOSITORY_INSECURE: "true"
     KUBECHECKS_FALLBACK_K8S_VERSION: "1.23.0"
     KUBECHECKS_LOG_LEVEL: debug
